<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tupo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/centreText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:clickable="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:text="@string/button1"
        android:layout_below="@+id/tupo_text"
        android:layout_alignParentEnd="true"
        android:textColor="@color/buttonColor"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="28dp"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="21dp"
        android:text="@string/button3" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/q1"
        android:layout_below="@+id/tupo_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/q2"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/q3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/q4"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/changeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/toastBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tupo_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/click_me" />

</RelativeLayout>